# pulumi-automation

./: setup.cfg
src/: pulumi_automation.py
