[metadata]
name = pulumi-automation
version = 0.1.0
author = Jan Češpivo
license_files = LICENSE
author_email = developers@allusio.com
description = Pulumi Automation Wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/pulumi-automation
project_urls =
    Bug Tracker = https://github.com/allusio/pulumi-automation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src